hard-gists/0f5f65ddbfa278713f58/run.log
=== Docker Run Log for 0f5f65ddbfa278713f58 ===
Started at: Mi 29. Okt 11:44:01 CET 2025

[2025-10-29 11:44:02] START: Running container for 0f5f65ddbfa278713f58
[2025-10-29 11:44:02] SUCCESS: Container 31466f62f7a657dbacc2e4375c2235aada72da94c75628756dc074046ea2f95a started for 0f5f65ddbfa278713f58
=== Container logs for 0f5f65ddbfa278713f58 ===
  File "/snippet.py", line 94
    print "Outfile exists, it will be overwritten"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 0f5f65ddbfa278713f58 ===
[2025-10-29 11:44:04] INFO: Container 31466f62f7a657dbacc2e4375c2235aada72da94c75628756dc074046ea2f95a has stopped
